--- a/src/app/core/footer/footer.component.sass
+++ b/src/app/core/footer/footer.component.sass
@@ -5,21 +5,27 @@ footer
   // border-top: 1px solid $grey0
   bottom: 0
   left: 0
+  padding: 16px
   position: fixed
   text-align: center
   width: 100%
   z-index: 1
 
   form
-    background-color: $grey1
     padding: 0 16px
+
+    @media screen and (min-width: 600px)
+      background-color: $grey1
 
   a
     color: $accent2
-    font-size: 32px
+    font-size: 24px
 
     &:hover
       color: $grey5
 
 .footer-text
+  border-left: 1px solid $grey0
   font-size: 12px
+  margin-left: 16px
+  padding-left: 16px
