--- a/src/styles.scss
+++ b/src/styles.scss
@@ -144,7 +144,7 @@ a {
 
 @media screen and (min-width: 600px) {
   .container {
-    margin: 16px auto;
+    margin: 0 auto;
     width: 80%;
     max-width: 1440px;
   }
